<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/inscription_apprenant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSecondary"
        android:paddingVertical="@dimen/padding_vertical_title"
        android:text="@string/inscription_apprenant"
        android:textSize="@dimen/subform_title_text_size"
        android:textAlignment="center"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- First input -->
    <TextView
        android:id="@+id/prenom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/form_elements"
        android:elegantTextHeight="false"
        android:text="@string/prenom"
        android:textSize="@dimen/form_label_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inscription_apprenant" />

    <EditText
        android:id="@+id/editTextPrenom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="21"
        android:inputType="textPersonName"
        android:hint="@string/input_prenom"
        android:textColor="@color/gray"
        android:textSize="@dimen/form_input_size"
        app:layout_constraintBaseline_toBaselineOf="@id/prenom"
        app:layout_constraintStart_toEndOf="@+id/prenom"
        android:importantForAutofill="no" />

    <!-- Ligne Nom -->
    <TextView
        android:id="@+id/nom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/form_elements"
        android:text="@string/nom"
        android:textSize="@dimen/form_label_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPrenom" />

    <EditText
        android:id="@+id/editTextNom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="21"
        android:inputType="textPersonName"
        android:hint="@string/input_nom"
        android:textColor="@color/gray"
        android:textSize="@dimen/form_input_size"
        app:layout_constraintBaseline_toBaselineOf="@id/nom"
        app:layout_constraintStart_toEndOf="@+id/nom"
        android:importantForAutofill="no" />

    <!-- Ligne Date de Naissance -->
    <TextView
        android:id="@+id/date_naissance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/form_elements"
        android:text="@string/date_naissance"
        android:textSize="@dimen/form_label_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNom" />

    <EditText
        android:id="@+id/editDateNaissance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="19"
        android:inputType="date"
        android:hint="@string/input_date_naissance"
        android:textColor="@color/gray"
        android:textSize="@dimen/form_input_size"
        app:layout_constraintBaseline_toBaselineOf="@id/date_naissance"
        app:layout_constraintStart_toEndOf="@+id/date_naissance"
        android:importantForAutofill="no" />

    <!-- Second Zone -->
    <TextView
        android:id="@+id/formation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSecondary"
        android:paddingVertical="@dimen/padding_vertical_title"
        android:text="@string/formation"
        android:textSize="@dimen/subform_title_text_size"
        android:layout_marginTop="@dimen/margin_between_section"
        android:textAlignment="center"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDateNaissance" />

    <!-- First input -->
    <TextView
        android:id="@+id/filiere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/form_elements"
        android:elegantTextHeight="false"
        android:text="@string/filiere"
        android:textSize="@dimen/form_label_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/formation" />

    <EditText
        android:id="@+id/editFiliere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="18"
        android:inputType="textPersonName"
        android:hint="@string/input_filiere"
        android:textColor="@color/gray"
        android:textSize="@dimen/form_input_size"
        app:layout_constraintBaseline_toBaselineOf="@id/filiere"
        app:layout_constraintStart_toEndOf="@+id/filiere"
        android:importantForAutofill="no" />

    <!-- Ligne Nom -->
    <TextView
        android:id="@+id/promotion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/form_elements"
        android:text="@string/promotion"
        android:textSize="@dimen/form_label_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editFiliere" />

    <EditText
        android:id="@+id/editPromotion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="21"
        android:inputType="text"
        android:hint="@string/input_promotion"
        android:textColor="@color/gray"
        android:textSize="@dimen/form_input_size"
        app:layout_constraintBaseline_toBaselineOf="@id/promotion"
        app:layout_constraintStart_toEndOf="@+id/promotion"
        android:importantForAutofill="no" />

    <!-- Ligne Date de Naissance -->
    <TextView
        android:id="@+id/annee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/form_elements"
        android:text="@string/annee"
        android:textSize="@dimen/form_label_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPromotion" />

    <EditText
        android:id="@+id/editAnnee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="24"
        android:inputType="date"
        android:hint="@string/input_annee"
        android:textColor="@color/gray"
        android:textSize="@dimen/form_input_size"
        app:layout_constraintBaseline_toBaselineOf="@id/annee"
        app:layout_constraintStart_toEndOf="@+id/annee"
        android:importantForAutofill="no" />

    <!-- Troisième Zone -->
    <TextView
        android:id="@+id/encadrement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSecondary"
        android:paddingVertical="@dimen/padding_vertical_title"
        android:text="@string/encadrement"
        android:textSize="@dimen/subform_title_text_size"
        android:layout_marginTop="@dimen/margin_between_section"
        android:textAlignment="center"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAnnee" />

    <!-- First input -->
    <TextView
        android:id="@+id/sujet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/form_elements"
        android:elegantTextHeight="false"
        android:text="@string/sujet"
        android:textSize="@dimen/form_label_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/encadrement" />

    <EditText
        android:id="@+id/editSujet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/form_elements"
        android:inputType="text"
        android:hint="@string/input_sujet"
        android:textColor="@color/gray"
        android:textSize="@dimen/form_input_size"
        app:layout_constraintBaseline_toBaselineOf="@id/sujet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sujet"
        android:importantForAutofill="no" />

    <!-- Ligne Nom Encadreur -->
    <TextView
        android:id="@+id/prenom_encadreur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/form_elements"
        android:text="@string/prenom_encadreur"
        android:textSize="@dimen/form_label_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editSujet" />

    <EditText
        android:id="@+id/editPrenomEncadreur"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/form_elements"
        android:inputType="text"
        android:hint="@string/input_prenom_encadreur"
        android:textColor="@color/gray"
        android:textSize="@dimen/form_input_size"
        app:layout_constraintBaseline_toBaselineOf="@id/prenom_encadreur"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/prenom_encadreur"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/nom_encadreur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/form_elements"
        android:text="@string/nom_encadreur"
        android:textSize="@dimen/form_label_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPrenomEncadreur" />

    <EditText
        android:id="@+id/editNomEncadreur"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/form_elements"
        android:inputType="text"
        android:hint="@string/input_nom_encadreur"
        android:textColor="@color/gray"
        android:textSize="@dimen/form_input_size"
        app:layout_constraintBaseline_toBaselineOf="@id/nom_encadreur"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nom_encadreur"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:text="@string/enregistrer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNomEncadreur" />


</androidx.constraintlayout.widget.ConstraintLayout>